Criacao do primeiro Controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+server.port=8066
+server.servlet.contextPath=/
+spring.datasource.url=jdbc:h2:mem:testeDB
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=stefanos
+spring.datasource.password=Ferrar31
+spring.jpa.database.plataform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
